[gd_scene load_steps=3 format=2]

[ext_resource path="res://Launcher.gd" type="Script" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]

[node name="Launcher" type="Node2D"]

script = ExtResource( 1 )

[node name="BallContainer" type="Node" parent="." index="0"]

[node name="Ball" parent="BallContainer" index="0" instance=ExtResource( 2 )]

position = Vector2( 180, 632 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="LaunchTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="grounded" from="BallContainer/Ball" to="." method="_on_ball_grounded"]

[connection signal="timeout" from="LaunchTimer" to="." method="_on_launch_timeout"]


